# R-Type

./: .commitlint.js  .gitignore  Action_8hpp.html  Action_8hpp__dep__incl.map  Action_8hpp__dep__incl.md5  Action_8hpp__incl.map  Action_8hpp__incl.md5  Action_8hpp_source.html  AnimationManager_8cpp.html  AnimationManager_8cpp__incl.map  AnimationManager_8cpp__incl.md5  AnimationManager_8hpp.html  AnimationManager_8hpp__dep__incl.map  AnimationManager_8hpp__dep__incl.md5  AnimationManager_8hpp__incl.map  AnimationManager_8hpp__incl.md5  AnimationManager_8hpp_source.html  AudioManager_8hpp.html  AudioManager_8hpp__dep__incl.map  AudioManager_8hpp__dep__incl.md5  AudioManager_8hpp__incl.map  AudioManager_8hpp__incl.md5  AudioManager_8hpp_source.html  BossPart_8hpp.html  BossPart_8hpp__dep__incl.map  BossPart_8hpp__dep__incl.md5  BossPart_8hpp__incl.map  BossPart_8hpp__incl.md5  BossPart_8hpp_source.html  Boss_8hpp.html  Boss_8hpp__dep__incl.map  Boss_8hpp__dep__incl.md5  Boss_8hpp__incl.map  Boss_8hpp__incl.md5  Boss_8hpp_source.html  BoundsSystem_8cpp.html  BoundsSystem_8cpp__incl.map  BoundsSystem_8cpp__incl.md5  BoundsSystem_8hpp.html  BoundsSystem_8hpp__dep__incl.map  (+1551 more)
.github/workflows/: build.yml  clang-tidy.yml  cpplint.yml  doxygen.yml  mirror.yml
Client/: CMakeLists.txt
Client/BenchMark/: Raylib.cpp  SDL2.cpp  SFML.cpp  raylib_ship  sdl_ship  sfml_ship
Client/src/: CMakeLists.txt  Main.cpp
Client/src/GameDesign/Includes/: GameLoop.cpp  GameLoop.hpp
Client/src/config/: keybinds.cfg
Client/src/engine/: GameEngine.cpp  GameEngine.hpp
Client/src/engine/audio/: AudioManager.hpp
Client/src/engine/ecs/: Entity.hpp  Registry.hpp  SparseArray.hpp  Zipper.hpp
Client/src/engine/graphics/: AnimationManager.cpp  AnimationManager.hpp  RenderComponents.hpp  RenderSystem.cpp  RenderSystem.hpp  TextureManager.cpp  TextureManager.hpp
Client/src/engine/inputs/: InputManager.cpp  InputManager.hpp  InputSystem.cpp  InputSystem.hpp  KeyBindings.hpp
Client/src/engine/network/: CircularBuffer.hpp  DecodFunc.hpp  Decoder.cpp  Decoder.hpp  Encode.cpp  Event.hpp  NetworkManager.cpp  NetworkManager.hpp
Client/src/engine/network/include/: Action.hpp  CircularBuffer.hpp  DecodFunc.hpp  Decoder.hpp  Encode.hpp  EncodeFunc.hpp  Event.hpp  NetworkManager.hpp
Client/src/engine/physics/: Physics2D.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
Client/src/engine/scene/: SceneManager.cpp  SceneManager.hpp
Client/src/engine/settings/: MultiplayerSkinManager.hpp  PlayerSettings.hpp
Client/src/engine/ui/: UIButton.cpp  UIButton.hpp  UIElement.cpp  UIElement.hpp  UIImage.cpp  UIImage.hpp  UIManager.hpp  UISolidColor.cpp  UISolidColor.hpp  UIText.cpp  UIText.hpp  UITextInput.cpp  UITextInput.hpp
Client/src/scenes/: CreateLobby.cpp  CreateLobby.hpp  GameOver.cpp  GameOver.hpp  JoinGame.cpp  JoinGame.hpp  LevelScene.cpp  LevelScene.hpp  Lobby.cpp  Lobby.hpp  LobbyInfo.cpp  LobbyInfo.hpp  LobbyJoin.cpp  LobbyJoin.hpp  LobbyPassword.cpp  LobbyPassword.hpp  MainGame.cpp  MainGame.hpp  MainMenu.cpp  MainMenu.hpp  Options.cpp  Options.hpp  RtypeScene.cpp  RtypeScene.hpp  SecondGame.cpp  SecondGame.hpp  SecondGameClient.cpp  SecondGameClient.hpp  Victory.cpp  Victory.hpp  WaitLobby.cpp  WaitLobby.hpp
Client/src/settings/: PlayerSettings.hpp
EngineModule/: CMakeLists.txt
EngineModule/src/ecs/: Entity.hpp  Registry.hpp  SparseArray.hpp  Zipper.hpp
EngineModule/src/engine/: GameEngine.cpp  GameEngine.hpp  ISubsystem.hpp
EngineModule/src/scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
EngineModule/src/subsystems/audio/: AudioSubsystem.cpp  AudioSubsystem.hpp  audio_export.hpp
EngineModule/src/subsystems/input/: InputSubsystem.cpp  InputSubsystem.hpp  KeyBindings.hpp  input_export.hpp
EngineModule/src/subsystems/messaging/: MessagingSubsystem.cpp  MessagingSubsystem.hpp
EngineModule/src/subsystems/network/: NetworkSubsystem.cpp  NetworkSubsystem.hpp  network_export.hpp
EngineModule/src/subsystems/physics/: Physics2D.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
EngineModule/src/subsystems/rendering/: RenderingSubsystem.cpp  RenderingSubsystem.hpp  rendering_export.hpp
EngineModule/src/subsystems/rendering/ui/: UIButton.cpp  UIButton.hpp  UIElement.hpp  UIImage.cpp  UIImage.hpp  UIManager.hpp  UISolidColor.cpp  UISolidColor.hpp  UIText.cpp  UIText.hpp  UITextInput.cpp  UITextInput.hpp
EngineModule/src/subsystems/resource/: ResourceSubsystem.cpp  ResourceSubsystem.hpp
GamePlay/Movement/: Movement.cpp  Movement.hpp
GamePlay/Player/: PlayerController.cpp  PlayerController.hpp
Server/: CMakeLists.txt  INetworkManager.hpp  NetworkMessage.hpp  conanfile.txt  vcpkg.json
Server/include/: NetworkMessage.hpp  PacketSerializer.hpp  ServerGame.hpp  ServerMacro.hpp
Server/include/network/: ClientManager.hpp  HandleClient.hpp  INetworkManager.hpp  ServerNetworkManager.hpp  TCPServer.hpp  UDPServer.hpp
Server/src/: CMakeLists.txt  ServerGame.cpp  main.cpp
Server/src/network/: ClientManager.cpp  HandleClient.cpp  ServerNetworkManager.cpp  TCPServer.cpp  UDPServer.cpp
Server/src/network/db/: Database.cpp  Database.hpp  IDatabase.hpp
Shared/components/: BossPart.hpp  Force.hpp  Levels.hpp  Physics2D.hpp  TileMap.hpp
Shared/dynamicLibLoader/: DLLoader.hpp
Shared/ecs/: Registry.hpp  SparseArray.hpp  Zipper.hpp
documentation/: BasicProtocole.md  BenchMark.md  CONTRIBUTING.md  Comparative_Study.md  Doxyfile  ENGINE_DEV_DOC.md  How-To-Contribute-Network-Server.md  HowToContibute.md  NetworkClient.md  SERVER_TECHNICAL_DOC.md  protocole.md
engine/: GameEngine.cpp  GameEngine.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+122 more)
(+65 files in other folders)
